# crmbuilder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  score-mentor-request-form-fields.md  score-mentor-request-form.yaml  start-v2.sh
.github/workflows/: postgres-tests.yml
PRDs/: CBM-PRD-CRM-Deploy-Context.md  CBM-PRD-CRM-Deploy.docx  CBM-PRD-CRM-Deploy.md  CBM-SPEC-doc-generator.md  CBM-SPEC-espocrm-impl.md  CBM-SPEC-layout-management.md  CBM-SPEC-relationship-management.md  CBM-espocrm-impl-PRD.md  CLAUDE-CODE-PROMPT-description-and-docgen.md  CLAUDE-CODE-PROMPT-layout-management.md  CLAUDE-CODE-PROMPT-relationship-management.md  crmbuilder-prd.md  crmbuilder-spec-data-import.md  crmbuilder-spec-doc-generator.md  crmbuilder-spec-espocrm-impl.md  crmbuilder-spec-layout-management.md  crmbuilder-spec-relationship-management.md  espocrm-ssl-tls-analysis.md
PRDs/Claude Code Prompts/: CLAUDE-CODE-PROMPT-content-version.md  CLAUDE-CODE-PROMPT-data-import.md  CLAUDE-CODE-PROMPT-deployment-bugfixes.md  CLAUDE-CODE-PROMPT-deployment.md  CLAUDE-CODE-PROMPT-description-and-docgen.md  CLAUDE-CODE-PROMPT-layout-management.md  CLAUDE-CODE-PROMPT-option-descriptions.md  CLAUDE-CODE-PROMPT-project-folder.md  CLAUDE-CODE-PROMPT-rename-to-crmbuilder.md
PRDs/Implementation Docs/: CBM-CRM-Reference.docx  CBM-CRM-Reference.md
PRDs/_archive/: INDEX.md
PRDs/application/: CRM-Builder-Document-Production-Process.docx  app-document-architecture.md  app-logging-reporting.md  app-yaml-schema.md
PRDs/features/: feat-doc-generator.md  feat-fields.md  feat-prd-creation.md
PRDs/implementation/: CLAUDE-CODE-PROMPT-copy-to-clipboard.md  CLAUDE-CODE-PROMPT-deployment.md  CLAUDE-CODE-PROMPT-layout-management.md  CLAUDE-CODE-PROMPT-relationship-management.md  CLAUDE-CODE-PROMPT-tooltip-field-property.md  SESSION-PROMPT-recovery-tools.md  bottom-bar-reorganization.md
PRDs/process/: CLAUDE-CODE-PROMPT-template-transcript-support.md  CRM-Builder-Document-Production-Process.STATUS.md  CRM-Builder-Document-Production-Process.docx  SESSION-PROMPT-doc-production-process-v2.0-continuation-part2.md  SESSION-PROMPT-doc-production-process-v2.0-continuation-part3.md  SESSION-PROMPT-doc-production-process-v2.0-continuation-part4.md  process-doc-revision-notes.md  v2-user-process-guide.md
PRDs/product/: CRMBuilder-PRD.md  UPDATE-PROMPT-yaml-schema-v1.2-category-6.md  app-ui-patterns.md  app-yaml-schema.md  survey-integration-architecture.md  yaml-schema-gap-analysis-MR-pilot.md  zoom-integration-architecture.md
PRDs/security/: Cloudfare_Secret_Key
automation/: __init__.py
automation/cbm_import/: __init__.py  __main__.py  cli.py  docx_parser.py  importer.py  parser_logic.py  reporter.py
automation/config/: __init__.py  preferences.py
automation/core/: __init__.py  active_client_state.py  client_reachability.py  create_client.py  master_prd_prompt.py  secrets.py
automation/data/: master.db
automation/db/: __init__.py  client_schema.py  connection.py  init_db.py  master_schema.py  migrations.py
automation/docgen/: __init__.py  generation_log.py  generator.py  git_ops.py  paths.py  pipeline.py  staleness.py  validation.py  workflow_diagram.py
automation/impact/: __init__.py  batch.py  changeimpact.py  deduplication.py  engine.py  precommit.py  queries.py  staleness.py  work_item_mapping.py
automation/importer/: __init__.py  commit.py  conflicts.py  identifiers.py  parser.py  pipeline.py  proposed.py  triggers.py
automation/migrations/: __init__.py  instance_json_migration.py
crmbuilder-v2/: .gitignore  COLLECTION-SETTINGS-GUIDE.md  README.md  TECHNICAL-GUIDE.md  USER-GUIDE.md  alembic.ini  docker-compose.dev.yml
docs/: CRM-Builder-User-Guide.docx  CRMBuilder_deployment_guide.md  EspoCRM-HowTo.docx  crm-platform-inventory.md  deployment-guide.md  impl-data-import.md  impl-deployment.md  impl-doc-generator.md  impl-entities.md  impl-fields.md  impl-layouts.md  impl-logging-reporting.md  impl-relationships.md  impl-ui-patterns.md  impl-yaml-schema.md  process.md  technical-guide.md  user-deployment.md  user-guide.md
docs/user/: user-guide.md
espo_impl/: main.py
prototype/: FINDINGS.md  cbm_client.db  create_schema.py  crmbuilder_master.db  populate_cbm.py  validate_schema.py
scripts/: apply_dec_025.py  deploy-production.sh  reconcile-divergence.sh
specifications/: README.md  glossary.md  governance-recording-rules.md  master-crmbuilder-PRD.md
tests/: conftest.py  test_api_client.py  test_audit_db.py  test_audit_email_templates.py  test_audit_entity_settings.py  test_audit_entry.py  test_audit_field_dynamic_logic.py  test_audit_foreign_fields.py  test_audit_formula_scripts.py  test_audit_manager.py  test_audit_manifest.py  test_audit_utils_field_prefix.py  test_comparator.py  test_condition_expression.py  test_config_loader.py  test_configure_progress.py  test_connection_config_form.py  test_data_profiler.py  test_deploy_config_repo.py  test_deploy_entry.py  test_deploy_manager.py  test_deploy_pipeline_dry_run.py  test_deploy_pipeline_security_rules.py  test_deploy_worker.py  test_duplicate_checks.py  test_email_templates.py  test_entity_manager.py  test_entity_settings.py  test_field_manager.py  test_filtered_tabs.py  test_formula.py  test_layout_manager.py  test_layout_roundtrip.py  test_models.py  test_record_generator.py  test_recovery_ssh.py  test_regenerate_record_dialog.py  test_regenerate_record_worker.py  test_relationship_manager.py  test_relative_date.py  (+18 more)
tools/: capture_layouts.py  crm_compare.py  discovery-interview.md  entity-interview-data.md  entity-interview-process.md  entity-interview-synthesis.md  entity-interview.md  generate-process-doc-template.js  generate_docs.py  generate_verification_spec.py  interview-master-prd.md  interview-process-definition.md
(+2604 files in other folders)
