[project]
name = "crmbuilder"
version = "0.1.0"
description = "CRM Builder — EspoCRM configuration deployment tool"
readme = "README.md"
authors = [{ name = "Doug", email = "doug@dougbower.com" }]
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.2",
    "requests>=2.32.5",
    "pyyaml>=6.0.2",
    "python-docx>=1.2.0",
    "paramiko>=3.0",
    "dnspython>=2.0",
]

[project.scripts]
crmbuilder = "espo_impl.main:main"
crmbuilder-migrate-instances = "automation.migrations.instance_json_migration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["espo_impl", "automation"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
testpaths = ["tests", "automation/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
