[project]
name = "crmbuilder"
version = "0.1.0"
description = "CRM Builder — EspoCRM configuration deployment tool"
readme = "README.md"
authors = [{ name = "Doug", email = "doug@dougbower.com" }]
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.2",
    "requests>=2.32.5",
    "pyyaml>=6.0.2",
    # Comment/format-preserving YAML, used only by the drift-reconciliation
    # write-back layer as a position-aware locator (we splice raw bytes rather
    # than re-serialize, so the rest of the file stays byte-for-byte intact).
    "ruamel.yaml>=0.18",
    "python-docx>=1.2.0",
    "paramiko>=3.0",
    "dnspython>=2.0",
    "anthropic>=0.45.0",
    "keyring>=25.0",
    # crmbuilder-v2 (storage system v0.1)
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # PI-alpha: Postgres driver (sync; psycopg3). Binary wheels avoid a local
    # libpq/compiler dependency. SQLite remains the default store until the
    # suite is green on PG and the prod migration is rehearsed.
    "psycopg[binary]>=3.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
crmbuilder = "espo_impl.main:main"
crmbuilder-migrate-instances = "automation.migrations.instance_json_migration:main"
crmbuilder-v2-api = "crmbuilder_v2.cli:run_api"
crmbuilder-v2-mcp = "crmbuilder_v2.cli:run_mcp"
crmbuilder-v2-bootstrap-db = "crmbuilder_v2.cli:bootstrap_db"
crmbuilder-v2-bootstrap = "crmbuilder_v2.cli:bootstrap_content"
crmbuilder-v2-ui = "crmbuilder_v2.cli:run_ui"
crmbuilder-v2-token = "crmbuilder_v2.cli:run_token_admin"
crmbuilder-v2-prune-events = "crmbuilder_v2.cli:run_prune_events"
crmbuilder-v2-scheduler = "crmbuilder_v2.scheduler.coordinating_scheduler:main"
crmbuilder-v2-scheduler-pool = "crmbuilder_v2.scheduler.parallel_scheduler:main"
crmbuilder-v2-ado = "crmbuilder_v2.scheduler.ado_scheduler:main"
crmbuilder-v2-release = "crmbuilder_v2.scheduler.release_scheduler:main"
crmbuilder-v2-release-monitor = "crmbuilder_v2.scheduler.release_monitor:main"
crmbuilder-v2-ado-pm = "crmbuilder_v2.scheduler.ado_scheduler:project_main"
crmbuilder-v2-deposit-audit = "crmbuilder_v2.transform.audit_deposit:main"
crmbuilder-v2-render-baseline = "crmbuilder_v2.render.baseline_report:main"
crmbuilder-v2-render-entity-prd = "crmbuilder_v2.render.entity_prd:main"
crmbuilder-v2-spreadsheet-profile = "crmbuilder_v2.adapters.spreadsheet:main"
crmbuilder-v2-register-source = "crmbuilder_v2.adapters.source_store:main"
crmbuilder-v2-export-espocrm = "crmbuilder_v2.adapters.espocrm.adapter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["espo_impl", "automation", "crmbuilder-v2/src/crmbuilder_v2"]

[tool.hatch.build.targets.wheel.sources]
"crmbuilder-v2/src/crmbuilder_v2" = "crmbuilder_v2"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4,<5",
    "ruff>=0.15.7",
    "jsonschema>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "automation/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config"]
asyncio_mode = "auto"
markers = [
    "v2: tests for crmbuilder-v2 (storage system)",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
